# lgpdnowgpt

./: .env  .gitignore  README.md  app.py  leitorPDF.ipynb  meubot.html  pyproject.toml  startguide.ipynb
utils/: chatBot.py  text.py
vectorstore/: index.faiss  index.pkl
